updated readme and gradio app

--- a/expert_assistant.ipynb
+++ b/expert_assistant.ipynb
@@ -61,7 +61,7 @@
     "import gradio as gr\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
-    "from llm_chains import CustomLangChain, VectorEmbedding, Talker, Whisper, OllamaService, setup_logger\n",
+    "from modules.llm_chains import CustomLangChain, VectorEmbedding, Talker, Whisper, OllamaService, setup_logger\n",
     "from dotenv import load_dotenv\n",
     "from huggingface_hub import login\n",
     "from openai import OpenAI\n",
@@ -93,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "Device: cuda\n",
-      "Fri Jul 25 22:36:53 2025       \n",
+      "Wed Jul 30 15:33:20 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 576.88                 Driver Version: 576.88         CUDA Version: 12.9     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -102,7 +102,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 4070      WDDM  |   00000000:01:00.0  On |                  N/A |\n",
-      "|  0%   56C    P8             11W /  200W |     907MiB /  12282MiB |      6%      Default |\n",
+      "| 62%   65C    P2            108W /  200W |    3162MiB /  12282MiB |     46%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -111,29 +111,32 @@
       "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A            2028    C+G   ...5n1h2txyewy\\TextInputHost.exe      N/A      |\n",
-      "|    0   N/A  N/A            2316    C+G   ...ms\\Microsoft VS Code\\Code.exe      N/A      |\n",
-      "|    0   N/A  N/A            4864    C+G   ...4__w1wdnht996qgy\\LinkedIn.exe      N/A      |\n",
-      "|    0   N/A  N/A            5816    C+G   ...8bbwe\\PhoneExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A            6420    C+G   ...AcrobatNotificationClient.exe      N/A      |\n",
-      "|    0   N/A  N/A            7572    C+G   ...indows\\System32\\ShellHost.exe      N/A      |\n",
-      "|    0   N/A  N/A            9672    C+G   ...yb3d8bbwe\\WindowsTerminal.exe      N/A      |\n",
-      "|    0   N/A  N/A           11080    C+G   ...ntrolPanel\\SystemSettings.exe      N/A      |\n",
-      "|    0   N/A  N/A           13784    C+G   ...4__cv1g1gvanyjgm\\WhatsApp.exe      N/A      |\n",
-      "|    0   N/A  N/A           14232    C+G   ...4__8wekyb3d8bbwe\\Video.UI.exe      N/A      |\n",
-      "|    0   N/A  N/A           15204    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
-      "|    0   N/A  N/A           15828    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
-      "|    0   N/A  N/A           17364    C+G   ...Chrome\\Application\\chrome.exe      N/A      |\n",
-      "|    0   N/A  N/A           18784    C+G   ...t\\Edge\\Application\\msedge.exe      N/A      |\n",
-      "|    0   N/A  N/A           19796    C+G   ...m\\111.0.2.0\\GoogleDriveFS.exe      N/A      |\n",
-      "|    0   N/A  N/A           20492    C+G   ...em32\\ApplicationFrameHost.exe      N/A      |\n",
-      "|    0   N/A  N/A           20960    C+G   ...Chrome\\Application\\chrome.exe      N/A      |\n",
-      "|    0   N/A  N/A           22008    C+G   ...y\\StartMenuExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A           22680    C+G   ....0.3351.95\\msedgewebview2.exe      N/A      |\n",
-      "|    0   N/A  N/A           25200    C+G   ....0.3351.95\\msedgewebview2.exe      N/A      |\n",
-      "|    0   N/A  N/A           27708    C+G   ...xyewy\\ShellExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A           27856    C+G   ..._cw5n1h2txyewy\\SearchHost.exe      N/A      |\n",
-      "|    0   N/A  N/A           28328    C+G   C:\\Windows\\explorer.exe               N/A      |\n",
+      "|    0   N/A  N/A            1456    C+G   ...indows\\System32\\ShellHost.exe      N/A      |\n",
+      "|    0   N/A  N/A            5388    C+G   ...x64__8wekyb3d8bbwe\\Photos.exe      N/A      |\n",
+      "|    0   N/A  N/A           10088    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
+      "|    0   N/A  N/A           10172    C+G   C:\\Windows\\explorer.exe               N/A      |\n",
+      "|    0   N/A  N/A           10772    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
+      "|    0   N/A  N/A           11788    C+G   ...y\\StartMenuExperienceHost.exe      N/A      |\n",
+      "|    0   N/A  N/A           11812    C+G   ..._cw5n1h2txyewy\\SearchHost.exe      N/A      |\n",
+      "|    0   N/A  N/A           12328    C+G   ...yb3d8bbwe\\WindowsTerminal.exe      N/A      |\n",
+      "|    0   N/A  N/A           13620    C+G   ...0.3351.109\\msedgewebview2.exe      N/A      |\n",
+      "|    0   N/A  N/A           14652    C+G   ...ms\\Microsoft VS Code\\Code.exe      N/A      |\n",
+      "|    0   N/A  N/A           15996    C+G   ...ntrolPanel\\SystemSettings.exe      N/A      |\n",
+      "|    0   N/A  N/A           16192    C+G   ...5n1h2txyewy\\TextInputHost.exe      N/A      |\n",
+      "|    0   N/A  N/A           16404    C+G   ...xyewy\\ShellExperienceHost.exe      N/A      |\n",
+      "|    0   N/A  N/A           16600    C+G   ...4__8wekyb3d8bbwe\\Video.UI.exe      N/A      |\n",
+      "|    0   N/A  N/A           16656    C+G   ...Chrome\\Application\\chrome.exe      N/A      |\n",
+      "|    0   N/A  N/A           17212    C+G   ...m\\111.0.2.0\\GoogleDriveFS.exe      N/A      |\n",
+      "|    0   N/A  N/A           17508    C+G   ...AcrobatNotificationClient.exe      N/A      |\n",
+      "|    0   N/A  N/A           19860    C+G   ...Chrome\\Application\\chrome.exe      N/A      |\n",
+      "|    0   N/A  N/A           21996    C+G   ...em32\\ApplicationFrameHost.exe      N/A      |\n",
+      "|    0   N/A  N/A           23612    C+G   ...8bbwe\\PhoneExperienceHost.exe      N/A      |\n",
+      "|    0   N/A  N/A           25132    C+G   ...t\\Edge\\Application\\msedge.exe      N/A      |\n",
+      "|    0   N/A  N/A           25472    C+G   ...4__w1wdnht996qgy\\LinkedIn.exe      N/A      |\n",
+      "|    0   N/A  N/A           30784    C+G   ...0.3351.109\\msedgewebview2.exe      N/A      |\n",
+      "|    0   N/A  N/A           32184    C+G   ...4__cv1g1gvanyjgm\\WhatsApp.exe      N/A      |\n",
+      "|    0   N/A  N/A           32672    C+G   ...ams\\signal-desktop\\Signal.exe      N/A      |\n",
+      "|    0   N/A  N/A           35152      C   ...e_\\.conda\\envs\\3LC\\python.exe      N/A      |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
