--- a/expert_assistant.ipynb
+++ b/expert_assistant.ipynb
@@ -2745,7 +2745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv_llms",
    "language": "python",
    "name": "python3"
   },
